--- a/blogpost.html
+++ b/blogpost.html
@@ -7,7 +7,11 @@
   <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
-  <h1>Aqui haremos un blog del post</h1>
-  <p>Este es el párrafo de inicio</p>
+  <div id="container">
+    <div id="post">
+      <h1>Este es el título atractivo e interesante del post</h1>
+      <p>Este es el párrafo de inicio donde vamos a explicar las cosas increíbles que se pueden hacer con Git</p>
+    </div>
+  </div>
 </body>
 </html>
