--- a/blogpost.html
+++ b/blogpost.html
@@ -8,6 +8,11 @@
 </head>
 <body>
   <div id="container">
+
+    <div id="cabecera">
+      Cabecera
+    </div>
+
     <div id="post">
       <h1>Este es el título atractivo e interesante del post</h1>
       <p>Este es el párrafo de inicio donde vamos a explicar las cosas increíbles que se pueden hacer con Git</p>
