--- a/blogpost.html
+++ b/blogpost.html
@@ -10,7 +10,8 @@
   <div id="container">
 
     <div id="cabecera">
-      Cabecera
+      Hyperblog
+      <span id="tagline">Tu blog de confianza</span>
     </div>
 
     <div id="post">
