--- a/blogpost.html
+++ b/blogpost.html
@@ -11,13 +11,14 @@
 
     <div id="cabecera">
       Hyperblog
-      <span id="tagline">Tu blog de confianza</span>
+      <span id="tagline">Tu blog maestro</span>
     </div>
 
     <div id="post">
       <h1>Este es el título atractivo e interesante del post</h1>
       <p>Este es el párrafo de inicio donde vamos a explicar las cosas increíbles que se pueden hacer con Git</p>
       <p>Los blog son la mejor forma de compartir información y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estadísticamente no lo eres... Por ahora.</p>
+      <p>Suscríbete y dale like</p>
     </div>
   </div>
 </body>
