--- a/blogpost.html
+++ b/blogpost.html
@@ -1,25 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Bienvenido | Hyperblog 2.0</title>
-  <link rel="stylesheet" href="css/estilos.css">
-</head>
-<body>
-  <div id="container">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Bienvenido | Hyperblog 2.0</title>
+    <link rel="stylesheet" href="css/estilos.css" />
+  </head>
+  <body>
+    <div id="container">
+      <div id="cabecera">
+        Hyperblog
+        <span id="tagline">Tu blog de cabecera</span>
+      </div>
 
-    <div id="cabecera">
-      Hyperblog
-      <span id="tagline">Tu blog de cabecera</span>
-    </div>
+      <div id="post">
+        <h1>Este es el título atractivo e interesante del post</h1>
+        <p>
+          Este es el párrafo de inicio donde vamos a explicar las cosas
+          increíbles que se pueden hacer con Git
+        </p>
+        <p>
+          Los blog son la mejor forma de compartir información y tus ideas.
+          Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un
+          rockstar. Pero estadísticamente no lo eres... Por ahora.
+        </p>
+        <p>Suscríbete y dale like</p>
+      </div>
 
-    <div id="post">
-      <h1>Este es el título atractivo e interesante del post</h1>
-      <p>Este es el párrafo de inicio donde vamos a explicar las cosas increíbles que se pueden hacer con Git</p>
-      <p>Los blog son la mejor forma de compartir información y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estadísticamente no lo eres... Por ahora.</p>
-      <p>Suscríbete y dale like</p>
+      <div id="footer">Hecho con amor en Platzi</div>
     </div>
-  </div>
-</body>
+  </body>
 </html>
