subrayando el título del post

--- a/blogpost.html
+++ b/blogpost.html
@@ -15,7 +15,7 @@
       </div>
 
       <div id="post">
-        <h1>Este es el título atractivo e interesante del post</h1>
+        <h1><u>Este es el título atractivo e interesante del post</u></h1>
         <p>
           Este es el párrafo de inicio donde vamos a explicar las cosas
           increíbles que se pueden hacer con Git
