--- a/blogpost.html
+++ b/blogpost.html
@@ -11,7 +11,7 @@
       <div id="cabecera">
         <img src="images/dragon.png" id="logo" />
         Hyperblog
-        <span id="tagline">Tu blog de cabecera</span>
+        <span id="tagline">Tu blog de confianza</span>
       </div>
 
       <div id="post">
